qal/qal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qal-nginx
  namespace: qal
spec:
  replicas: 10
  selector:
    matchLabels:
      name: qal-nginx
  template:
    metadata:
      labels:
        name: qal-nginx
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: qal-nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        #env:
        #- name: PORT
        #  value: "9555"
        #- name: DISABLE_STATS
        #  value: "1"
        #- name: DISABLE_TRACING
        #  value: "1"
        # - name: JAEGER_SERVICE_ADDR
        #   value: "jaeger-collector:14268"
        #resources:
        #  requests:
        #    cpu: 200m
        #    memory: 180Mi
        #  limits:
        #    cpu: 300m
        #    memory: 300Mi
        #readinessProbe:
        #  initialDelaySeconds: 20
        #  periodSeconds: 15
        #  exec:
        #    command: ["/bin/grpc_health_probe", "-addr=:9555"]
        #livenessProbe:
        #  initialDelaySeconds: 20
        #  periodSeconds: 15
        #  exec:
        #    command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-qal-service
#  namespace: qal
#  labels:
#    app: nginx-qal-service
#spec:
#  type: ClusterIP
#  selector:
#    app: nginx-qal
#  ports:
#  - name: nginx-qal-service
#    port: 8080
#    targetPort: 80
#---
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: adservice-autoscaling
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: adservice
#  minReplicas: 1
#  maxReplicas: 10
#  targetCPUUtilizationPercentage: 60
