qal/qal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qal-ingress
  namespace: qal
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /qal-nginx
            backend:
              service:
                name: qal-service
                port:
                  number: 8080
